rename resend to send
